# mini-TGI

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
mini_tgi/: __init__.py  api.py  generator.py  main.py
